@@ -135,6 +135,7 @@ char16restart(void)
 #if !defined( __SDCC_pdk14) && !defined( __SDCC_pdk15) // Lack of memory
 #if defined(__STDC_VERSION__) && __STDC_VERSION__ >= 201112L && !(defined(__SDCC_mcs51) && defined(__SDCC_MODEL_SMALL))
 #if !defined(__APPLE__)
+#if !defined(__FreeBSD__) || __FreeBSD_version >= 1302000 // Known FreeBSD 13.2 bug #272758.
 	static mbstate_t ps;
 	char16_t c16[3];
 	char c[MB_LEN_MAX];
@@ -168,6 +169,7 @@ char16restart(void)
 #endif
 #endif
 #endif
+#endif
 }
 #endif
 
@@ -178,6 +180,7 @@ char32restart(void)
 #if !defined( __SDCC_pdk14) && !defined( __SDCC_pdk15) // Lack of memory
 #if defined(__STDC_VERSION__) && __STDC_VERSION__ >= 201112L
 #if !defined(__APPLE__)
+#if !defined(__FreeBSD__) || __FreeBSD_version >= 1302000 // Known FreeBSD 13.2 bug #272758.
 	static mbstate_t ps;
 	char32_t c32[3];
 	char c[MB_LEN_MAX];
@@ -189,6 +192,7 @@ char32restart(void)
 	ASSERT(c32[0] == (U"C")[0]);
 	ASSERT(c32rtomb(c, c32[0], &ps) == 1);
 	ASSERT(c[0] == 'C');
+#endif
 #endif
 #endif
 #endif
